# reMarkable-Qt

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdragdroplistwidget.cpp  qdragdroplistwidget.h  reMarkable-Qt.pro  remarkablefilecontent.cpp  remarkablefilecontent.h  remarkablessh.cpp  remarkablessh.h  remarkableuserdata.cpp  remarkableuserdata.h  resources.qrc  utilities.h
